commiting all files

--- a/MOVIES.html
+++ b/MOVIES.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html" charset="utf-8">
     <title>Sharipov_Saydullo_MOVIES</title>
-    <link rel="stylesheet" href="C:\Users\User\Desktop\int\CSS/CSS_1.css">
+    <link rel="stylesheet" href="C:C:\Users\User\Desktop\int\HTML\Sulatn.github.io/CSS_1.css">
   </head>
   <body id="o">
     <article><a id="u" href="C:\Users\User\Desktop\int\HTML/HOME.html"><em><big> HOME </big></em></a></article>
