--- a/HOME.html
+++ b/HOME.html
@@ -3,18 +3,18 @@
   <head>
     <meta http-equiv="content-type" content="text/html" charset="utf-8"/>
     <title>Sharipov_Saydullo</title>
-    <link rel="stylesheet" href="C:\Users\User\Desktop\int\CSS/CSS_1.css">
+    <link rel="stylesheet" href="C:\Users\User\Desktop\int\HTML\Sulatn.github.io/CSS_1.css">
 
   </head>
   <body id="ho">
-    <article><a id="n" href="C:\Users\User\Desktop\int\HTML/HOME.html"><big><em>HOME</em></big></a></article>
+    <article><a id="n" href="C:\Users\User\Desktop\int\HTML\Sulatn.github.io/HOME.html"><big><em>HOME</em></big></a></article>
 
-    <center><h1 id="f"><a id="l" target="_blank" href="C:\Users\User\Desktop\int\HTML/MOVIES.html">MOVIES</a></h1>
+    <center><h1 id="f"><a id="l" target="_blank" href="C:\Users\User\Desktop\int\HTML\Sulatn.github.io/MOVIES.html">MOVIES</a></h1>
 
 
 <div id="e" >
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-  <a id="g" target="_blank" href="C:\Users\User\Desktop\int\HTML/ABOUT_AS.html">ABOUT</a>
+  <a id="g" target="_blank" href="C:\Users\User\Desktop\int\HTML\Sulatn.github.io/ABOUT_AS.html">ABOUT</a>
 <br/><br/>
 </div>
   </body>
