commiting all files

--- a/HOME.html
+++ b/HOME.html
@@ -9,7 +9,7 @@
   <body id="ho">
     <article><a id="n" href="C:\Users\User\Desktop\int\HTML\Sulatn.github.io/HOME.html"><big><em>HOME</em></big></a></article>
 
-    <center><h1 id="f"><a id="l" target="_blank" href="C:\Users\User\Desktop\int\HTML\Sulatn.github.io/MOVIES.html">MOVIES</a></h1>
+    <center><h1 id="f"><bottom><a id="l" target="_blank" href="https://sulatn.github.io/MOVIES.html">MOVIES</a></bottom></h1>
 
 
 <div id="e" >
