--- a/MOVIES.html
+++ b/MOVIES.html
@@ -8,6 +8,6 @@
   <body id="o">
     <article><a id="u" href="C:\Users\User\Desktop\int\HTML\Sulatn.github.io/HOME.html"><em><big> HOME </big></em></a></article>
     <table border="5px" width="100%" id="qi" ><tr><td width="50%"><img width="100%" src="https://cdn.eventfinda.co.nz/uploads/events/transformed/957090-436234-34.png"></td><td width="50%" id="q"><em><a id="t" href="file:///C:/Users/User/Desktop/int%20to%20it/HTML/Who_am_I.html">Who am I?</a></em></td></tr></table>
-    <table border="5px" width="100%" id="qi" ><tr><td width="50%"><img width="100%" src="C:\Users\User\Desktop\int\IMG/IMG_7.png"></td><td width="50%" id="q"><em><a id="t"  href="file:///C:/Users/User/Desktop/int%20to%20it/HTML/Harry_Potter.html">Harry Potter</a></em></td></tr></table>
+    <table border="5px" width="100%" id="qi" ><tr><td width="50%"><img width="100%" src="C:\Users\User\Desktop\int\HMTL\Sulatn.github.io/IMG_7.png"></td><td width="50%" id="q"><em><a id="t"  href="file:///C:/Users/User/Desktop/int%20to%20it/HTML/Harry_Potter.html">Harry Potter</a></em></td></tr></table>
   </body>
 </html>
