--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html" charset="utf-8"/>
     <title>Sharipov_Saydullo</title>
-    <link rel="stylesheet" href="https://sulatn.github.io/CSS_1.css">
+    <link rel="stylesheet" href="https://github.com/Sulatn/Sulatn.github.io/blob/master/CSS_1.css">
 
   </head>
   <body id="ho">
